# brig-ui

./: .gitignore  README.md
backend/: Cargo.toml  README.md
backend/src/: camera.rs  main.rs  util.rs
frontend/: Cargo.toml  Dockerfile  README.md  index.html  nginx.conf
frontend/assets/: charts.css
frontend/src/: camera.rs  datavis.rs  main.rs  util.rs
sensor_modules/gps/: gps.py  gps.service
sensor_modules/idronaut/: IDRONAUT.service  idronaut.py  idronaut2.py  idronaut_old.py  idronaut_slim.py  idronaut_slim_old.py  log03-03-2025 08_36_45.txt  log03-03-2025 13_52_56.txt  log04-06-2024 09_49_14.txt  log04-06-2024 10_01_03.txt  log05-02-2025 08_26_24.txt  log05-02-2025 08_27_29.txt  log05-02-2025 09_44_53.txt  log05-02-2025 10_09_14.txt  log05-02-2025 14_53_52.txt  log05-02-2025 15_09_11.txt  log05-06-2024 07_39_15.txt  log06-02-2025 09_21_48.txt  log06-02-2025 15_39_10.txt  log07-02-2025 10_48_24.txt  log07-02-2025 14_09_57.txt  log09-04-2024 07_22_50.txt  log10-05-2024 07_35_35.txt  log10-05-2024 07_38_30.txt  log10-05-2024 11_42_38.txt  log11-12-2024 08_54_14.txt  log11-12-2024 08_55_17.txt  log12-02-2025 12_05_53.txt  log12-04-2024 13_08_57.txt  log17-12-2024 11_10_19.txt  log21-02-2025 10_58_50.txt  log22-01-2025 15_33_35.txt  log22-01-2025 16_06_25.txt  log22-01-2025 16_34_48.txt  log25-02-2025 16_04_31.txt  start_scripts.sh  stop-NTP.sh
sensor_modules/micasense/: camera_capture.service  main.py  requirements.txt
sensor_modules/micasense/camera_capture/: camera_capture.py  events.csv  (+2 more)
sensor_modules/services/: boat.target  docker_influxdb.service
(+1 files in other folders)
