[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["ssr"] }
leptos_axum = "0.6"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json","rustls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
num-traits = "0.2.19"
chrono = "0.4.39"
axum-server = "0.7.1"
csv = "1.3.1"
tower-http = { version = "0.6.2", features = ["cors"] }
image = "0.25.6"
bytes = "1.10.1"
