[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
const_format = "0.2.34"
gloo = "0.11.0"
js-sys = "0.3.77"
leptos = { version = "0.7.7", features = ["csr"] }
leptos-chartistry = "0.2.1"
leptos_router = "0.7.7"
log = "0.4.27"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
serde_json = "1.0.139"
tracing = "0.1.41"
wasm-logger = "0.2.0"
